<resources>
    <string name="app_name">SafetyApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="safety_app_title">Safety App</string>
    <string name="contact_button">Contacts</string>
    <string name="OnClick">Hello</string>
    <string name="textview">TextView</string>
    <string name="button_test">BUTTON_TEST</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="back_home">Back</string>
    <string name="Contact_title">Contacts Page</string>
    <string name="title_activity_contacts_page">ContactsPage</string>
    <string name="title_activity_add_contact">add_contact</string>
    <string name="add_contact">New Contact</string>
    <string name="enter_new_contact">Enter New Contact</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="Location">Location</string>
    <string name="id">ID</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_location">GPS</string>
</resources>
